--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,8 +21,16 @@
   background-color: transparent;
 }
 
+.header__link:hover {
+  color: #bdbdbd;
+}
+
 .header__button {
   padding: 0.75rem 1.5rem;
   color: #146eb4;
   font-weight: 500;
+}
+
+.header__button:hover {
+  background-color: #bdbdbd;
 }
