style: logo height

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,10 @@
   background-color: #1a181e;
 }
 
+.footer__logo {
+  height: fit-content;
+}
+
 .footer__main {
   display: flex;
   justify-content: space-between;
