--- a/src/components/SloganMaker/SloganMaker.css
+++ b/src/components/SloganMaker/SloganMaker.css
@@ -124,6 +124,8 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .slogan-maker__slogan {
+  display: flex;
+  align-items: center;
   width: 22rem;
   height: 3.75rem;
   padding: 0.5rem 1rem;
