--- a/src/components/SloganMaker/SloganMaker.css
+++ b/src/components/SloganMaker/SloganMaker.css
@@ -62,6 +62,10 @@
   font-size: 1rem;
 }
 
+*:focus {
+  outline: none;
+}
+
 /* search input cross icon */
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: searchfield-cancel-button;
