--- a/src/components/SloganMaker/SloganMaker.css
+++ b/src/components/SloganMaker/SloganMaker.css
@@ -1,7 +1,7 @@
 .slogan-maker {
   position: relative;
-  /* top: -12rem; */
-  padding: 4rem 12rem 7rem 12rem;
+  top: -12rem;
+  padding: 4rem 12rem 4rem 12rem;
   margin: 0 10rem;
   border-radius: 0.5rem;
   background-color: #ffffff;
