--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,7 +31,7 @@
 
 .header__button {
   padding: 0.75rem 1.5rem;
-  border-radius: 0.25rem;
+  border-radius: 4px;
   color: #146eb4;
   font-weight: 500;
 }
